# MinerU-ROCm

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Makefile  NOTICE  README.md  README.zh-CN.md  REUSE.toml  SECURITY.md  SUPPORT.md  conftest.py  model_card.json  model_card.pipeline.json  model_card.pipeline.windows-hip.json  pyproject.toml  reproducibility.lock.yaml
.github/workflows/: ci.yml
LICENSES/: LicenseRef-MinerU-Open-Source-License.txt
adapter/: adapter_config.py  pipeline_adapter.py  run_adapter.py  vlm_adapter.py
adapter/setup/: 00-install-deps.ps1  00-install-deps.sh
configs/: mineru_vlm_full.yaml
docs/: HANDOFF-windows-hip.md  architecture.md  backends.md  benchmark-methodology.md  hardware-matrix.md  how-it-works.md  known-gaps.md  release-artifact.md  release-checklist.md  reproducibility.md  spike-mineru-api.md  spike-vlm-vllm.md  vlm-engine-sample.md
docs/issues/: migraphx-loop-subgraph-scoping.md
docs/superpowers/plans/: 2026-07-18-mineru-rocm-repo-spine-and-pipeline.md  2026-07-18-mineru-rocm-vlm.md  2026-07-19-mineru-rocm-p0-identity-license-lock.md  2026-07-19-mineru-rocm-p1a-package-skeleton-decouple.md  2026-07-19-mineru-rocm-p1b-eval-plumbing-port.md  2026-07-19-mineru-rocm-p1c-runner-port.md  2026-07-19-mineru-rocm-p1c2-driver.md  2026-07-19-mineru-rocm-p1d-cli-checkrepo.md  (+3 more)
docs/upstream/: mineru-issue-5288-review.md  mineru-issue-5288.md
docs/upstream-pr/: AMD.md.section.zh.md  README.md  README.row.md  issue-5288-comment.md
examples/: run_demo.ps1  run_demo.sh  run_vlm_demo.sh  serve_vlm_vllm.sh  wait_vlm.sh
results/_archive/: README.md
scripts/: __init__.py  check_deps.py  check_repo.py  redact_internal.py  sample_predictions.py  validate_platform_artifacts.py
src/mineru_rocm/: __init__.py  canary.py  cli.py  config.py  dispatcher.py  driver.py  omnidocbench.py  preflight.py  runner.py  scoring.py  types.py  validation.py
tests/: test_canary.py  test_check_repo.py  test_cli.py  test_directml.py  test_dispatcher.py  test_dispatcher_contract.py  test_driver.py  test_omnidocbench.py  test_pipeline_output.py  test_preflight.py  test_release_metadata.py  test_runner_integrity.py  test_runner_lock.py  test_runner_manifest.py  test_scoring.py  test_types.py  test_validate_platform_artifacts.py  test_validation.py  test_vlm_adapter.py
(+94 files in other folders)
