[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mineru-rocm"
version = "0.1.0"
description = "Evaluation-backed AMD ROCm port of opendatalab/MinerU (3.4 pipeline + 2.5-Pro VLM) for OmniDocBench v1.6"
readme = "README.md"
requires-python = ">=3.11"
# Base license is Apache-2.0. The MinerU Open Source License adds commercial-threshold
# and attribution terms that apply to the pipeline-wrapping path — see NOTICE and LICENSES/.
license = "Apache-2.0"
authors = [{ name = "AIwork4me" }]
keywords = [
  "mineru", "document-parsing", "amd-gpu", "rocm", "rdna3",
  "vllm", "omnidocbench", "vision-language-model",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
# Core package is GPU-free and platform-free. The single core dep is PyYAML
# (scoring writes/parses OmniDocBench eval configs). GPU/platform deps stay
# optional: omnidocbench-rocm engine integration is [platform].
dependencies = ["PyYAML>=6.0"]

[project.optional-dependencies]
# Optional: omnidocbench-rocm platform integration. The adapter uses local
# mineru_rocm.types — no engine import coupling.
platform = ["omnidocbench-rocm>=0.3.1,<0.4"]
dev = ["pytest>=8", "ruff>=0.6", "reuse>=1.3", "build"]

[project.urls]
Homepage = "https://github.com/AIwork4me/MinerU-ROCm"
Repository = "https://github.com/AIwork4me/MinerU-ROCm"
Issues = "https://github.com/AIwork4me/MinerU-ROCm/issues"
Upstream = "https://github.com/opendatalab/MinerU"

[project.scripts]
mineru-rocm = "mineru_rocm.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mineru_rocm = ["data/*.yaml"]

[tool.ruff]
# Production code (src/ + scripts/) is fully ruff-clean. Tests use a legacy
# compact style (semicolons, single-letter locals, unused context-manager
# bindings) that is tolerated via per-file-ignores rather than churned.
[tool.ruff.lint]
per-file-ignores."tests/**" = ["E701", "E702", "E741", "F841"]
